Fixed overflow design

--- a/http/a/main.css
+++ b/http/a/main.css
@@ -8,6 +8,7 @@ strong, b {
 body {
 	background: url('/img/background.svg') no-repeat center fixed;
 	background-size: cover;
+	overflow-x: hidden;
 }
 input {
 	color: #2c3e50;
